--- a/EDA/aida-conll-yago_EDA.ipynb
+++ b/EDA/aida-conll-yago_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -94,13 +114,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
+       "      <th>token</th>\n",
+       "      <th>mention</th>\n",
+       "      <th>full_mention</th>\n",
+       "      <th>YAGO2</th>\n",
+       "      <th>wikipedia_URL</th>\n",
+       "      <th>wikipedia_ID</th>\n",
+       "      <th>freebase</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -159,29 +179,51 @@
        "</div>"
       ],
       "text/plain": [
-       "         0     1       2        3                                     4  \\\n",
-       "0       EU     B      EU  --NME--                                  None   \n",
-       "1  rejects  None    None     None                                  None   \n",
-       "2   German     B  German  Germany  http://en.wikipedia.org/wiki/Germany   \n",
-       "3     call  None    None     None                                  None   \n",
-       "4       to  None    None     None                                  None   \n",
+       "     token mention full_mention    YAGO2  \\\n",
+       "0       EU       B           EU  --NME--   \n",
+       "1  rejects    None         None     None   \n",
+       "2   German       B       German  Germany   \n",
+       "3     call    None         None     None   \n",
+       "4       to    None         None     None   \n",
        "\n",
-       "       5         6  \n",
-       "0   None      None  \n",
-       "1   None      None  \n",
-       "2  11867  /m/0345h  \n",
-       "3   None      None  \n",
-       "4   None      None  "
+       "                          wikipedia_URL wikipedia_ID  freebase  \n",
+       "0                                  None         None      None  \n",
+       "1                                  None         None      None  \n",
+       "2  http://en.wikipedia.org/wiki/Germany        11867  /m/0345h  \n",
+       "3                                  None         None      None  \n",
+       "4                                  None         None      None  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "acy_df = pd.DataFrame(data = df[1:])\n",
+    "new = ['token', 'mention', 'full_mention', 'YAGO2', 'wikipedia_URL', 'wikipedia_ID', 'freebase']\n",
+    "acy_df = acy_df.rename(columns = dict(zip(range(7), new)))\n",
     "acy_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "176615"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(acy_df)"
    ]
   },
   {
@@ -269,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
