--- a/EDA/exploring_wikipedia2vec.ipynb
+++ b/EDA/exploring_wikipedia2vec.ipynb
@@ -598,13 +598,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gensim.models import KeyedVectors\n",
-    "w2v = KeyedVectors.load_word2vec_format(\"enwiki_20180420_100d.txt\", binary=False)"
+    "# Import models type\n",
+    "from gensim.models import KeyedVectors"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Use model type to load txt file\n",
+    "w2v = KeyedVectors.load_word2vec_format(\"enwiki_20180420_100d.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In recent gensim versions you can load a subset starting from the front of the file using the optional limit parameter to load_word2vec_format(). So use limit=500000 to get the most-frequent 500,000 words' vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('saving', 0.7900023460388184),\n",
+       " ('saved', 0.7763535976409912),\n",
+       " ('reclaim', 0.7728390097618103),\n",
+       " ('recover', 0.7695223689079285),\n",
+       " ('help', 0.751587986946106),\n",
+       " ('redeem', 0.7505150437355042),\n",
+       " ('restore', 0.7452740669250488),\n",
+       " ('bring', 0.74521803855896),\n",
+       " ('destroy', 0.7413591742515564),\n",
+       " ('keep', 0.7402280569076538)]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = w2v.most_similar(\"save\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('queen', 0.8306491374969482),\n",
+       " ('monarch', 0.7416260838508606),\n",
+       " ('ENTITY/Queen_consort', 0.7348716855049133),\n",
+       " ('laungshe', 0.7347309589385986),\n",
+       " ('regnant', 0.7243735790252686),\n",
+       " ('chelna', 0.7236212491989136),\n",
+       " ('consort', 0.720160722732544),\n",
+       " ('indlovukati', 0.7181541919708252),\n",
+       " ('kamamalu', 0.7178552150726318),\n",
+       " ('indlovukazi', 0.714848518371582)]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = w2v.most_similar(positive=['woman', 'king'], negative=['man'])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7687104"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculates word similarity score\n",
+    "similarity = w2v.similarity('woman', 'man')\n",
+    "similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5174522399902344"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate word distance\n",
+    "distance = w2v.distance('media', 'press')\n",
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
