--- a/notebooks/EDA/explore_wikipedia2vec.ipynb
+++ b/notebooks/EDA/explore_wikipedia2vec.ipynb
@@ -7,7 +7,9 @@
     "# Install necessary packages\n",
     "- !pip install gensim\n",
     "- !pip install wikipedia2vec\n",
-    "- !pip install pyemd # Necessary for one of Gensim's functions"
+    "- !pip install pyemd # Necessary for one of Gensim's functions\n",
+    "\n",
+    "**Update**: these are installed via Poetry, so if you set up your environment per the root readme and are correctly using that environment as your Jupyter Notebook kernel, the packages will be available to you."
    ]
   },
   {
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +95,17 @@
       "text/plain": [
        "[('queen', 0.7698541283607483),\n",
        " ('monarch', 0.6843380928039551),\n",
-       " ('throne', 0.6755737066268921),\n",
+       " ('throne', 0.6755735874176025),\n",
        " ('daughter', 0.6594556570053101),\n",
-       " ('princess', 0.6520533561706543),\n",
+       " ('princess', 0.6520534753799438),\n",
        " ('prince', 0.6517034769058228),\n",
-       " ('elizabeth', 0.6464517116546631),\n",
-       " ('mother', 0.631171703338623),\n",
+       " ('elizabeth', 0.6464517712593079),\n",
+       " ('mother', 0.6311717629432678),\n",
        " ('emperor', 0.6106470823287964),\n",
        " ('wife', 0.6098655462265015)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,25 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('queen', 0.896455705165863),\n",
+       "[('queen', 0.8964555859565735),\n",
        " ('monarch', 0.8495979309082031),\n",
        " ('throne', 0.8447030782699585),\n",
-       " ('princess', 0.8371669054031372),\n",
-       " ('elizabeth', 0.8356794714927673),\n",
-       " ('daughter', 0.8348595499992371),\n",
+       " ('princess', 0.8371668457984924),\n",
+       " ('elizabeth', 0.835679292678833),\n",
+       " ('daughter', 0.8348594307899475),\n",
        " ('prince', 0.8230059742927551),\n",
        " ('mother', 0.8154449462890625),\n",
        " ('margaret', 0.8147734999656677),\n",
-       " ('father', 0.8100854158401489)]"
+       " ('father', 0.8100855350494385)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,14 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lunch\n"
+      "cereal\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/johannes/entity-disambiguation/.venv/lib/python3.7/site-packages/gensim/models/keyedvectors.py:877: FutureWarning: arrays to stack must be passed as a \"sequence\" type such as list or tuple. Support for non-sequence iterables such as generators is deprecated as of NumPy 1.16 and will raise an error in the future.\n",
+      "  vectors = vstack(self.word_vec(word, use_norm=True) for word in used_words).astype(REAL)\n"
      ]
     }
    ],
@@ -168,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8323494"
+       "0.8323495"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,25 +200,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('dog', 0.8798074722290039),\n",
-       " ('rabbit', 0.7424427270889282),\n",
+       " ('rabbit', 0.7424426674842834),\n",
        " ('cats', 0.7323004007339478),\n",
-       " ('monkey', 0.7288710474967957),\n",
-       " ('pet', 0.7190139293670654),\n",
-       " ('dogs', 0.7163873314857483),\n",
-       " ('mouse', 0.6915251016616821),\n",
-       " ('puppy', 0.6800068616867065),\n",
+       " ('monkey', 0.7288709878921509),\n",
+       " ('pet', 0.7190139889717102),\n",
+       " ('dogs', 0.7163872718811035),\n",
+       " ('mouse', 0.6915250420570374),\n",
+       " ('puppy', 0.6800068020820618),\n",
        " ('rat', 0.6641027331352234),\n",
-       " ('spider', 0.6501134634017944)]"
+       " ('spider', 0.6501135230064392)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +240,7 @@
        "3.4892687395218687"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "5.960464477539063e-08"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.25340497493743896"
+       "0.2534049153327942"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6921040117740631"
+       "0.6921039819717407"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +328,7 @@
        "0.7066633"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,17 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load unzipped pkl file\n",
-    "wiki2vec = Wikipedia2Vec.load(\"enwiki_20180420_100d.pkl\")"
+    "wiki2vec = Wikipedia2Vec.load(\"../../embeddings/enwiki_20180420_100d.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -509,15 +519,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.6 s, sys: 3.17 s, total: 6.77 s\n",
-      "Wall time: 9.42 s\n"
+      "CPU times: user 3.5 s, sys: 5.4 s, total: 8.9 s\n",
+      "Wall time: 16.3 s\n"
      ]
     },
     {
@@ -529,13 +539,13 @@
        " (<Entity Yoda>, 0.7504513),\n",
        " (<Word yularen>, 0.74208754),\n",
        " (<Word saesee>, 0.7390899),\n",
-       " (<Word jedi>, 0.7362622),\n",
+       " (<Word jedi>, 0.7362623),\n",
        " (<Word sidious>, 0.73391825),\n",
        " (<Word anakin>, 0.7304383),\n",
        " (<Word zarbon>, 0.7281125)]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,33 +559,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.07 s, sys: 6.14 s, total: 10.2 s\n",
-      "Wall time: 25.6 s\n"
+      "CPU times: user 3.04 s, sys: 1.65 s, total: 4.69 s\n",
+      "Wall time: 4.29 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(<Entity Harvard University>, 1.0000001),\n",
-       " (<Entity John F. Kennedy School of Government>, 0.81384987),\n",
+       "[(<Entity Harvard University>, 1.0),\n",
+       " (<Entity John F. Kennedy School of Government>, 0.8138498),\n",
        " (<Word harvard>, 0.80841565),\n",
-       " (<Entity Harvard College>, 0.7746782),\n",
-       " (<Entity Signet society>, 0.75375855),\n",
-       " (<Entity List of Harvard College freshman dormitories>, 0.7442793),\n",
-       " (<Entity Harvard Faculty of Arts and Sciences>, 0.7426085),\n",
-       " (<Entity Radcliffe Institute for Advanced Study>, 0.7415956),\n",
-       " (<Entity Harvard Society of Fellows>, 0.7386711),\n",
+       " (<Entity Harvard College>, 0.7746781),\n",
+       " (<Entity Signet society>, 0.7537585),\n",
+       " (<Entity List of Harvard College freshman dormitories>, 0.74427927),\n",
+       " (<Entity Harvard Faculty of Arts and Sciences>, 0.7426084),\n",
+       " (<Entity Radcliffe Institute for Advanced Study>, 0.74159557),\n",
+       " (<Entity Harvard Society of Fellows>, 0.7386712),\n",
        " (<Entity Cambridge, Massachusetts>, 0.73181486)]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,14 +618,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8min 15s, sys: 16.7 s, total: 8min 32s\n",
+      "Wall time: 9min 9s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
     "# Use model type to load txt file\n",
-    "w2v = KeyedVectors.load_word2vec_format(\"enwiki_20180420_100d.txt\")"
+    "w2v = KeyedVectors.load_word2vec_format(\"../../embeddings/enwiki_20180420_100d.txt\")"
    ]
   },
   {
@@ -627,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -636,16 +655,16 @@
        "[('saving', 0.7900023460388184),\n",
        " ('saved', 0.7763535976409912),\n",
        " ('reclaim', 0.7728390097618103),\n",
-       " ('recover', 0.7695223689079285),\n",
-       " ('help', 0.751587986946106),\n",
+       " ('recover', 0.7695224285125732),\n",
+       " ('help', 0.7515880465507507),\n",
        " ('redeem', 0.7505150437355042),\n",
        " ('restore', 0.7452740669250488),\n",
-       " ('bring', 0.74521803855896),\n",
+       " ('bring', 0.7452179789543152),\n",
        " ('destroy', 0.7413591742515564),\n",
-       " ('keep', 0.7402280569076538)]"
+       " ('keep', 0.740227997303009)]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,25 +676,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('queen', 0.8306491374969482),\n",
-       " ('monarch', 0.7416260838508606),\n",
-       " ('ENTITY/Queen_consort', 0.7348716855049133),\n",
+       " ('monarch', 0.7416261434555054),\n",
+       " ('ENTITY/Queen_consort', 0.7348717451095581),\n",
        " ('laungshe', 0.7347309589385986),\n",
-       " ('regnant', 0.7243735790252686),\n",
-       " ('chelna', 0.7236212491989136),\n",
+       " ('regnant', 0.7243735194206238),\n",
+       " ('chelna', 0.7236213684082031),\n",
        " ('consort', 0.720160722732544),\n",
        " ('indlovukati', 0.7181541919708252),\n",
        " ('kamamalu', 0.7178552150726318),\n",
        " ('indlovukazi', 0.714848518371582)]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +715,7 @@
        "0.7687104"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,16 +728,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5174522399902344"
+       "0.5174522697925568"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,20 +747,13 @@
     "distance = w2v.distance('media', 'press')\n",
     "distance"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ac297r",
    "language": "python",
-   "name": "python3"
+   "name": "ac297r"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
