--- a/notebooks/EDA/EDA_aida-conll-yago.ipynb
+++ b/notebooks/EDA/EDA_aida-conll-yago.ipynb
@@ -13,8 +13,7 @@
     "import dask.dataframe as dd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "%matplotlib inline\n",
-    "#downloading wikipedia2vec failed in my case"
+    "%matplotlib inline"
    ]
   },
   {
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
     "# df_acy = dd.read_csv('../../aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv', sep='\\t',dtype='object').compute()\n",
     "# res = df.infer_objects()\n",
     "\n",
-    "tsv_file = open('../../aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv')\n",
+    "tsv_file = open('../../data/aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv')\n",
     "read_tsv = csv.reader(tsv_file, delimiter=\"\\t\")\n",
     "df = []\n",
     "for row in read_tsv:\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +78,7 @@
        "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +193,7 @@
        "4                                  None         None      None  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +216,7 @@
        "176615"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,12 +239,12 @@
     }
    ],
    "source": [
-    "print('{:.2f}% of them had a full mention matched'.format(sum([i!=None for i in acy_df[2]])/len(acy_df)*100))"
+    "print('{:.2f}% of them had a full mention matched'.format(sum([i!=None for i in acy_df.iloc[:, 2]])/len(acy_df)*100))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +256,29 @@
     }
    ],
    "source": [
-    "print('{:.2f}% of them had a yago2 entity matched'.format(sum([(i!=None and i!='--NME--') for i in acy_df[3]])/len(acy_df)*100))"
+    "print('{:.2f}% of them had a yago2 entity matched'.format(sum([(i!=None and i!='--NME--') for i in acy_df.iloc[:, 3]])/len(acy_df)*100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.60% of them had a yago2 entity matched\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{:.2f}% of them had a yago2 entity matched'.format(sum([(i!=None and i!='--NME--') for i in acy_df.iloc[:, 3]])/len(acy_df)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -274,12 +290,12 @@
     }
    ],
    "source": [
-    "print('{:.2f}% of them had a wikipedia page matched'.format(sum([i!=None for i in acy_df[4]])/len(acy_df)*100))"
+    "print('{:.2f}% of them had a wikipedia page matched'.format(sum([i!=None for i in acy_df.iloc[:, 4]])/len(acy_df)*100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +307,7 @@
     }
    ],
    "source": [
-    "print('{:.2f}% of them had a freebase mid matched'.format(sum([i!=None for i in acy_df[6]])/len(acy_df)*100))"
+    "print('{:.2f}% of them had a freebase mid matched'.format(sum([i!=None for i in acy_df.iloc[:, 6]])/len(acy_df)*100))"
    ]
   }
  ],
