--- a/notebooks/baselines/baseline_anchor_stats.ipynb
+++ b/notebooks/baselines/baseline_anchor_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,31 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "%matplotlib inline\n",
-    "#downloading wikipedia2vec failed in my case\n",
     "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/johannes/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    stop = stopwords.words('english')\n",
+    "except LookupError:\n",
+    "    # Download stopwords if its your first time\n",
+    "    import nltk\n",
+    "    nltk.download('stopwords')"
    ]
   },
   {
@@ -70,7 +93,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>12</td>\n",
        "      <td>6199</td>\n",
        "      <td>Anarchism</td>\n",
@@ -88,7 +111,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>25</td>\n",
        "      <td>38404</td>\n",
        "      <td>Autism</td>\n",
@@ -106,7 +129,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>39</td>\n",
        "      <td>101038</td>\n",
        "      <td>Albedo</td>\n",
@@ -124,7 +147,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>290</td>\n",
        "      <td>9659</td>\n",
        "      <td>A</td>\n",
@@ -142,7 +165,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>303</td>\n",
        "      <td>173</td>\n",
        "      <td>Alabama</td>\n",
@@ -199,7 +222,7 @@
     }
    ],
    "source": [
-    "my_path = '../../kwnlp/'\n",
+    "my_path = '../../data/kwnlp/'\n",
     "article_df = pd.read_csv(os.path.join(my_path, 'article.csv'))\n",
     "article_df.head()"
    ]
@@ -237,31 +260,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>United States</td>\n",
        "      <td>3434750</td>\n",
        "      <td>152451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>World War II</td>\n",
        "      <td>32927</td>\n",
        "      <td>133668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>India</td>\n",
        "      <td>14533</td>\n",
        "      <td>112069</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>France</td>\n",
        "      <td>5843419</td>\n",
        "      <td>109669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>footballer</td>\n",
        "      <td>10568</td>\n",
        "      <td>101027</td>\n",
@@ -285,7 +308,7 @@
     }
    ],
    "source": [
-    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor_target_counts.csv'))\n",
+    "anchor_df = pd.read_csv(os.path.join(my_path, 'anchor-target-counts.csv'))\n",
     "anchor_df.head()"
    ]
   },
@@ -323,77 +346,77 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>United States</td>\n",
        "      <td>3434750</td>\n",
        "      <td>152451</td>\n",
        "      <td>united states</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>World War II</td>\n",
        "      <td>32927</td>\n",
        "      <td>133668</td>\n",
        "      <td>world war ii</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>India</td>\n",
        "      <td>14533</td>\n",
        "      <td>112069</td>\n",
        "      <td>india</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>France</td>\n",
        "      <td>5843419</td>\n",
        "      <td>109669</td>\n",
        "      <td>france</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>footballer</td>\n",
        "      <td>10568</td>\n",
        "      <td>101027</td>\n",
        "      <td>footballer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15269224</td>\n",
+       "      <th>15269224</th>\n",
        "      <td>Sheldon</td>\n",
        "      <td>1299850</td>\n",
        "      <td>1</td>\n",
        "      <td>sheldon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15269225</td>\n",
+       "      <th>15269225</th>\n",
        "      <td>Korunamoyee Rani Rashmoni</td>\n",
        "      <td>59216176</td>\n",
        "      <td>1</td>\n",
        "      <td>korunamoyee rani rashmoni</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15269226</td>\n",
+       "      <th>15269226</th>\n",
        "      <td>Musik-Lexikon</td>\n",
        "      <td>64672172</td>\n",
        "      <td>1</td>\n",
        "      <td>musik-lexikon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15269227</td>\n",
+       "      <th>15269227</th>\n",
        "      <td>Su-27</td>\n",
        "      <td>2733709</td>\n",
        "      <td>1</td>\n",
        "      <td>su-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15269228</td>\n",
+       "      <th>15269228</th>\n",
        "      <td>Bhakta Kumbara</td>\n",
        "      <td>45352088</td>\n",
        "      <td>1</td>\n",
@@ -499,7 +522,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>United States</td>\n",
        "      <td>3434750</td>\n",
        "      <td>152451</td>\n",
@@ -521,7 +544,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>American</td>\n",
        "      <td>3434750</td>\n",
        "      <td>65722</td>\n",
@@ -543,7 +566,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>USA</td>\n",
        "      <td>3434750</td>\n",
        "      <td>8559</td>\n",
@@ -565,7 +588,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>U.S.</td>\n",
        "      <td>3434750</td>\n",
        "      <td>7633</td>\n",
@@ -587,7 +610,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>US</td>\n",
        "      <td>3434750</td>\n",
        "      <td>5288</td>\n",
@@ -706,7 +729,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>united states</td>\n",
        "      <td>3434750</td>\n",
        "      <td>30</td>\n",
@@ -715,7 +738,7 @@
        "      <td>152451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>american</td>\n",
        "      <td>3434750</td>\n",
        "      <td>30</td>\n",
@@ -724,7 +747,7 @@
        "      <td>65722</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>usa</td>\n",
        "      <td>3434750</td>\n",
        "      <td>30</td>\n",
@@ -733,7 +756,7 @@
        "      <td>8559</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>u.s.</td>\n",
        "      <td>3434750</td>\n",
        "      <td>30</td>\n",
@@ -742,7 +765,7 @@
        "      <td>7633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>us</td>\n",
        "      <td>3434750</td>\n",
        "      <td>30</td>\n",
@@ -798,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +845,7 @@
     "# df_acy = dd.read_csv('../../aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv', sep='\\t',dtype='object').compute()\n",
     "# res = df.infer_objects()\n",
     "\n",
-    "tsv_file = open('../../aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv')\n",
+    "tsv_file = open('../../data/aida-conll-yago-dataset/AIDA-YAGO2-DATASET.tsv')\n",
     "read_tsv = csv.reader(tsv_file, delimiter=\"\\t\")\n",
     "df = []\n",
     "for row in read_tsv:\n",
@@ -831,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +889,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>EU</td>\n",
        "      <td>B</td>\n",
        "      <td>EU</td>\n",
@@ -876,7 +899,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>rejects</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -886,7 +909,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>German</td>\n",
        "      <td>B</td>\n",
        "      <td>German</td>\n",
@@ -896,7 +919,7 @@
        "      <td>/m/0345h</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>call</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -906,7 +929,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>to</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -935,7 +958,7 @@
        "4                                  None         None      None  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1008,7 @@
        "33172"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,12 +1028,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create some lists so that we don't have to reconstruct them again throughout the loops\n",
     "anchor_texts = list(at_count_df['normalized_anchor_text'])\n",
+    "\n",
+    "# Remove NaNs\n",
+    "anchor_texts = [x for x in anchor_texts if str(x) != 'nan']\n",
+    "\n",
     "anchor_texts2 = ' '.join(anchor_texts).split(' ')\n",
     "anchor_target_count = list(at_count_df['anchor_target_count'])\n",
     "page_id = list(at_count_df['target_page_id'])"
@@ -1018,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1157,7 @@
        "1000"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1177,7 @@
        "0.446"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1181,13 +1208,20 @@
     "num_unnones = sum([(y_pred[i]!=None and y_test[i]==None) for i in range(len(y_pred))])\n",
     "print('Should be NULL but was misclassified: ', num_unnones)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ac297r",
    "language": "python",
-   "name": "python3"
+   "name": "ac297r"
   },
   "language_info": {
    "codemirror_mode": {
